fixed overlaps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .card-footer {
-  font-size: 0.95rem;
+  font-size: 0.7rem;
   word-break: break-word;
 }
 a {
